--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.5.0",
     "cookie-parser": "^1.4.5",
@@ -16,6 +17,7 @@
     "hbs": "^4.1.2",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.0.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
