--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "hbs": "^4.1.2",
+    "ironlauncher": "^0.22.0",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
     "node-fetch": "^3.0.0",
