--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ironlauncher": "^0.22.0",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "node-fetch": "^3.0.0",
     "serve-favicon": "^2.5.0"
   },
