--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.27.0",
+    "cloudinary-multer": "^1.0.2",
     "connect-mongo": "^4.5.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
@@ -19,6 +21,7 @@
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-fetch": "^3.0.0",
     "serve-favicon": "^2.5.0"
   },
